<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0A0D27"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/emtehan"
            android:layout_width="92dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/appName"
            android:textColor="#616161"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/qustioncount"
            android:layout_width="154dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/question_count"
            android:textColor="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emtehan" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qustioncount">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/show_yourAnswer"
                    android:layout_width="73dp"
                    android:layout_height="31dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="107dp"
                    android:layout_marginEnd="106dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/showAnswer"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0FFFFFFF"
                    android:backgroundTint="#11FFFFFF"
                    android:padding="10dp"
                    android:text="@string/questiosn_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/true_btn"
            style="@style/btn_answer"
            android:layout_width="293dp"
            android:layout_height="41dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/true_btn"
            android:textColor="@color/green"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toTopOf="@+id/False_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/False_btn"
            style="@style/btn_answer"
            android:layout_width="293dp"
            android:layout_height="41dp"
            android:layout_marginStart="159dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="158dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/false_btn"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/true_btn"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_next"
            android:textColor="@color/verylightgray"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/previous_btn"
            app:layout_constraintTop_toBottomOf="@+id/False_btn" />

        <Button
            android:id="@+id/previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_previous"
            android:textColor="@color/verylightgray"
            app:cornerRadius="3dp"
            app:layout_constraintEnd_toStartOf="@+id/next_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/False_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
